2008-04-10  Marek Habersack  <mhabersack@novell.com>

	* MimeTypes.cs: added some missing MIME types. New entries
	contributed by Albert Ritmeester
	<aritmeester@vitalhealthsoftware.nl>, thanks! Fixes bug #372290

2008-04-09  Marek Habersack  <mhabersack@novell.com>

	* HttpContext.cs: make RewritePath work correctly in the 2.0
	profile, fixes bug #371581

	* HttpApplicationFactory.cs: compile web references. Fixes bug
	#377934

	* VirtualPath.cs: added a method to convert a physical path into a
	virtual one, if the physical path is under the application root.

2008-04-08  Dean Brettle <dean@brettle.com>

	* HttpApplicationFactory.cs (CapabilitiesProcessor): changed to
	use etc/mono/2.0/Browser/*.browser files in addition to 
	~/App_Browsers/*.browser files.

2008-04-07  Marek Habersack  <mhabersack@novell.com>

	* VirtualPath.cs: added

2008-04-02  Marek Habersack  <mhabersack@novell.com>

	* HttpRequest.cs: make sure QueryStringRaw is always returned with
	a leading '?' and that we return something meaningful even if the
	url components weren't collected before. Fixes bug #376352

2008-04-01  Marek Habersack  <mhabersack@novell.com>

	* HttpApplication.cs: set context.Handler to the detected handler
	object before firing application events. Fixes bug #372897

2008-03-31  Marek Habersack  <mhabersack@novell.com>

	* StaticFileHandler.cs: added code to use custom
	VirtualPathProvider, if present, to serve files from virtual
	storage.

	* HttpResponse.cs: added two internal TransmitFile overloads which
	take a VirtualFile as a parameter.

2008-03-27  Marek Habersack  <mhabersack@novell.com>

	* HttpRequest.cs: make UrlComponents internal.

	* HttpContext.cs: added support for resource provider factories.

2008-03-13  Marek Habersack  <mhabersack@novell.com>

	* HttpApplicationFactory.cs: use HttpApplication.BinDirs to
	create watchers for binary application directories.

	* HttpApplication.cs: use HttpRuntime.CaseInsensitive instead of
	own IsRunningOnWindows.